apps/production/sliding-proxy-values.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sliding-proxy-midnightthoughts
    namespace: matrix
spec:
    template:
        spec:
            containers:
                - name: sliding-proxy-midnightthoughts-container
