apps/production/nfs-server.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nfs-server
  namespace: nfs-server
  labels:
    app: nfs-server
spec:
  type: ClusterIP # use "LoadBalancer" to get a public ip
  selector:
    app: nfs-server
  ports:
    - name: tcp-2049
      port: 2049
      protocol: TCP
    - name: udp-111
      port: 111
      protocol: UDP
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nfs-server
  namespace: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      name: nfs-server
      namespace: nfs-server
      labels:
        app: nfs-server
    spec:
      nodeSelector:
        "kubernetes.io/hostname": "nordgedanken.dev"
      priorityClassName: system-cluster-critical
      containers:
        - name: nfs-server
          image: git.nordgedanken.dev/kubernetes/gitops/itsthenetwork/nfs-server-alpine:latest
          securityContext:
            capabilities:
              add: ["SYS_ADMIN", "SETPCAP"]
          volumeMounts:
            - mountPath: /exports
              name: nfs-vol
          ports:
            - name: tcp-2049
              containerPort: 2049
              protocol: TCP
            - name: udp-111
              containerPort: 111
              protocol: UDP
      volumes:
        - name: nfs-vol
          hostPath:
            path: /kubernetes # modify this to specify another path to store nfs share data
            type: DirectoryOrCreate
